--- a/css/style-animations.css
+++ b/css/style-animations.css
@@ -4,3 +4,9 @@
 .ex-1-square:hover{
     background-color: red;
 }
+.ex-2-square{
+    transition: width 2s ease;
+}
+.ex-2-square:active{
+    width: 100%;
+}
