--- a/css/style-animations.css
+++ b/css/style-animations.css
@@ -10,3 +10,15 @@
 .ex-2-square:active{
     width: 100%;
 }
+.ex-3-square{
+    transition: border-radius 0.5s;
+}
+.ex-3-square:hover{
+    border-radius: 50%;
+}
+.ex-4-square {
+    transition: opacity 1s;
+}
+.ex-4-square:hover{
+    opacity: 0;
+}
