--- a/css/style-animations.css
+++ b/css/style-animations.css
@@ -22,3 +22,9 @@
 .ex-4-square:hover{
     opacity: 0;
 }
+.ex-5-square{
+    transition: transform 1s;
+}
+.ex-5-square:hover{
+    transform: scale(2);
+}
