--- a/css/style-animations.css
+++ b/css/style-animations.css
@@ -31,3 +31,9 @@
 .ex-6-img:hover{
     filter: grayscale(1);
 }
+.ex-7-img{
+    transition: filter 2s;
+}
+.ex-7-img:hover{
+    filter: sepia(0.7);
+}
