--- a/css/leo-solutions.css
+++ b/css/leo-solutions.css
@@ -44,3 +44,11 @@
     filter: sepia(0.8);
     border-radius: 20px;
 }
+.ex-9-img{
+    transition: all 2s;
+}
+.ex-9-img:hover{
+    border-radius: 20px;
+    transform: scale(1.5);
+    filter: sepia(0.7);
+}
