--- a/css/leo-solutions.css
+++ b/css/leo-solutions.css
@@ -87,3 +87,25 @@
 .ex-12-button:hover .ex-12-bottom-white{
     animation: translate-bottom-12 2s linear;
 }
+@keyframes translate-top-13 {
+    0%{left:10%; top: -10px;}
+    20%{left:calc(100% - 3px); top:-10px;}
+    40%{left:calc(100% - 3px); top: calc(100% - 3px);}
+    60%{left: -3px; top: calc(100% - 3px);}
+    80%{left: -3px; top: -17px;}
+    100%{left:10%; top: -17px;}
+}
+.ex-13-button:hover .ex-13-top-white{
+    animation: translate-top-13 3s linear;
+}
+@keyframes translate-bottom-13 {
+    0%{right:20%; bottom: -10px;}
+    20%{right:calc(100% - 57px); bottom:-10px;}
+    40%{right:calc(100% - 57px); bottom: calc(100% - 3px);}
+    60%{right: -3px; bottom: calc(100% - 3px);}
+    80%{right: -3px; bottom: -17px;}
+    100%{right:20%; bottom: -17px;}
+}
+.ex-13-button:hover .ex-13-bottom-white{
+    animation: translate-bottom-13 3s linear;
+}
